Update get new instance method.